--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_DATABASE: ESP
+      MYSQL_ROOT_HOST: %
     volumes:
       - /var/docker/esp/mysql:/var/lib/mysql
   esp:
