--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/login-action@v1.10.0
         with:
           registry: ghcr.io
-          username: ${{ env.GITHUB_ACTOR }}
+          username: ${{ GITHUB_ACTOR }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker
