--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://${DATABASE_HOST}:3306/ESP?serverTimezone=Europe/Moscow
+    url: jdbc:postgresql://${DATABASE_HOST}:5432/esp
     username: ${DATABASE_USER_NAME}
     password: ${DATABASE_PASSWORD}
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
