--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           push: true
           tags: ghcr.io/bigtows/esp-controller:latest
   update-platform:
-    needs: publishing-to-docker
+    #TODO needs: publishing-to-docker
     runs-on: ubuntu-latest
     outputs:
       job-status: ${{ job.status }}
